trustfall_core/src/resources/test_data/parse_errors/invalid_filter_argument_name_start.parse-error.ron

Err(OtherError("Filter argument names must start with an ASCII letter or underscore character: 1forexample",
Pos(
  line: 4,
  column: 58,
)))
